; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_block_pass.c_zend_optimizer_get_persistent_constant.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_block_pass.c_zend_optimizer_get_persistent_constant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@zend_constants = common dso_local global i32 0, align 4
@CONST_PERSISTENT = common dso_local global i32 0, align 4
@CONST_NO_FILE_CACHE = common dso_local global i32 0, align 4
@compiler_options = common dso_local global i32 0, align 4
@ZEND_COMPILE_WITH_FILE_CACHE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zend_optimizer_get_persistent_constant(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* @zend_constants, align 4
  %11 = call i32 @EG(i32 %10)
  %12 = load i32*, i32** %5, align 8
  %13 = call %struct.TYPE_4__* @zend_hash_find_ptr(i32 %11, i32* %12)
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %9, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %15 = icmp ne %struct.TYPE_4__* %14, null
  br i1 %15, label %16, label %46

16:                                               ; preds = %3
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %18 = call i32 @ZEND_CONSTANT_FLAGS(%struct.TYPE_4__* %17)
  %19 = load i32, i32* @CONST_PERSISTENT, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %45

22:                                               ; preds = %16
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %24 = call i32 @ZEND_CONSTANT_FLAGS(%struct.TYPE_4__* %23)
  %25 = load i32, i32* @CONST_NO_FILE_CACHE, align 4
  %26 = and i32 %24, %25
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %34

28:                                               ; preds = %22
  %29 = load i32, i32* @compiler_options, align 4
  %30 = call i32 @CG(i32 %29)
  %31 = load i32, i32* @ZEND_COMPILE_WITH_FILE_CACHE, align 4
  %32 = and i32 %30, %31
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %45, label %34

34:                                               ; preds = %28, %22
  %35 = load i32*, i32** %6, align 8
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = call i32 @ZVAL_COPY_VALUE(i32* %35, i32* %37)
  %39 = load i32, i32* %7, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %34
  %42 = load i32*, i32** %6, align 8
  %43 = call i32 @Z_TRY_ADDREF_P(i32* %42)
  br label %44

44:                                               ; preds = %41, %34
  store i32 1, i32* %4, align 4
  br label %59

45:                                               ; preds = %28, %16
  store i32 0, i32* %4, align 4
  br label %59

46:                                               ; preds = %3
  %47 = load i32*, i32** %5, align 8
  %48 = call i32 @ZSTR_VAL(i32* %47)
  %49 = load i32*, i32** %5, align 8
  %50 = call i32 @ZSTR_LEN(i32* %49)
  %51 = call i32* @zend_get_special_const(i32 %48, i32 %50)
  store i32* %51, i32** %8, align 8
  %52 = load i32*, i32** %8, align 8
  %53 = icmp ne i32* %52, null
  br i1 %53, label %54, label %58

54:                                               ; preds = %46
  %55 = load i32*, i32** %6, align 8
  %56 = load i32*, i32** %8, align 8
  %57 = call i32 @ZVAL_COPY_VALUE(i32* %55, i32* %56)
  store i32 1, i32* %4, align 4
  br label %59

58:                                               ; preds = %46
  store i32 0, i32* %4, align 4
  br label %59

59:                                               ; preds = %58, %54, %45, %44
  %60 = load i32, i32* %4, align 4
  ret i32 %60
}

declare dso_local %struct.TYPE_4__* @zend_hash_find_ptr(i32, i32*) #1

declare dso_local i32 @EG(i32) #1

declare dso_local i32 @ZEND_CONSTANT_FLAGS(%struct.TYPE_4__*) #1

declare dso_local i32 @CG(i32) #1

declare dso_local i32 @ZVAL_COPY_VALUE(i32*, i32*) #1

declare dso_local i32 @Z_TRY_ADDREF_P(i32*) #1

declare dso_local i32* @zend_get_special_const(i32, i32) #1

declare dso_local i32 @ZSTR_VAL(i32*) #1

declare dso_local i32 @ZSTR_LEN(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
